# a-and-b-wedding-website

./: .editorconfig  .gitignore  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  README.md  devcontainer.json
services/backend/: Dockerfile  README.md  app.py  pyproject.toml
services/frontend/: Dockerfile  README.md  index.html  package.json  vite.config.ts
services/frontend/src/: App.css  App.tsx  index.css
services/frontend/src/components/: DateSection.tsx  EventInfoSection.tsx  FAQsSection.tsx  GallerySection.tsx  HeroSection.tsx  Navbar.tsx  OurStorySection.tsx  RSVPSection.tsx
services/frontend/src/data/: storyItems.ts
services/frontend/src/pages/: GatePage.tsx  MainSite.tsx
