[project]
name = "backend"
version = "0.1.0"
description = "Wedding app backend API server"
authors = [
    {name = "Brian Wang", email = "brianwang17@yahoo.com"},
    {name = "Allison Villapando", email = "allison.villapando@yahoo.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-cors (>=5.0.0,<6.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
